--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@
   --animation-duration: 250ms;
 }
 
+body.showImg {
+  overflow: hidden;
+}
+
 .gallery {
   display: grid;
   max-width: 1140px;
@@ -18,8 +22,8 @@
 
 .gallery__item {
   position: relative;
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+    0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
 .gallery__image:hover {
